src/test/deca/codegen/invalid/execution_error_modulo_by_0.deca
// Description:
//    Test modulo by 0 error
//
// Result:
//[Begin Result]
//Error: Modulo by 0 encountered
//[End Result]
//
// History:
//    created on 09/01/2025
{

    int a = 2 % 0;
}